<?xml version="1.0" encoding="utf-8"?>
<resources>
    <drawable name="clr_normal">#666666</drawable>
    <drawable name="clr_pressed">#333333</drawable>
    <drawable name="list_normal">#00000000</drawable>
    <drawable name="list_pressed">#FF333333</drawable>
    <string name="app_name">档案盘查系统</string>
    <string name="title_activity_all">盘库</string>
    <string name="title_activity_one">查找</string>
    <string name="menu_settings">Settings</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="version">版本号:</string>
    <string name="dmin">最小频点:</string>
    <string name="band">频段:</string>
    <string name="dmax">最大频点:</string>
    <string name="power">功率:</string>
    <string name="scantime">询查最大时间:</string>
    <string name="Connect">立即连接</string>
    <string name="SerialPort">串口:</string>
    <string name="BaudRate">波特率:</string>
    <string name="idno">ID</string>
    <string name="epcid">标签ID:</string>
    <string name="times">次数</string>
    <string name="rssi">RSSI</string>
    <string name="ant1">天线1</string>
    <string name="ant2">天线2</string>
    <string name="ant3">天线3</string>
    <string name="ant4">天线4</string>
    <string name="ant5">天线5</string>
    <string name="ant6">天线6</string>
    <string name="ant7">天线7</string>
    <string name="ant8">天线8</string>
    <string name="number">已查找数:</string>
    <string name="ttime">运行时间(s):</string>
    <string name="btscan">扫描</string>
    <string name="btstop">停止</string>
    <string name="basicparam">基本参数</string>
    <string name="scanparam">询查参数</string>
    <string name="qvalue">Q:</string>
    <string name="session">Session:</string>
    <string name="tidptr">TID地址:</string>
    <string name="tidlen">TID长度:</string>
    <string name="beepstr">蜂鸣器:</string>
    <string name="getstr">读取</string>
    <string name="setstr">设置</string>
    <string name="btn_getstr">读取</string>
    <string name="btn_setstr">设置</string>
    <string name="txtepc">标签ID:</string>
    <string name="bankid">存储区:</string>
    <string name="memptr">地     址:</string>
    <string name="memlen">长     度:</string>
    <string name="pwdstr">密     码:</string>
    <string name="readstr">读数据:</string>
    <string name="writestr">写数据:</string>
    <string name="butnread">读</string>
    <string name="butnwrite">写</string>
    <string name="beginId">开始标签号:</string>
    <string name="findId">查找号码:</string>
    <string name="textRssi">距离估测:</string>
    <string name="endId">结束标签号:</string>
    <string name="butnwriteepc">写EPC号</string>
    <string name="tab_scan">盘库</string>
    <string name="btempty">清空</string>
    <string name="btsent">发送</string>
    <string name="tab_rw">读写</string>
    <string name="tab_param">参数</string>
    <string name="tab_setting">设置</string>
    <string name="tab_rssi">查找案卷</string>
    <string name="text_ip">服务器IP:</string>
    <string name="text_port">端口号:</string>
    <string name="text_power">功率:</string>
    <string name="switch_vol">扫描时声音</string>
    <string name="saveset">保存设置</string>
    <string name="text_address">请求地址:</string>
    <string name="power_error">功率设置失败</string>
    <string name="beep_error">蜂鸣器设置失败</string>
    <string name="frequent_error">频点设置失败</string>
    <string name="test_connect">保存</string>
    <string name="table_name1">已查找数据</string>
    <string name="table_name2">未查找数据</string>
    <string name="change_table_button">切换表格</string>
    <string name="text_max_length">标签长度:</string>
    <string name="antenna_error">天线设置失败</string>
    <string name="set_success">设置成功</string>
    <string name="openport_success">串口连接成功</string>
    <string name="openport_failed">串口连接失败</string>
    <string name="get_success">读取成功</string>
    <string name="get_failed">读取失败</string>
    <string name="write_failed">写数据失败</string>
    <string name="write_success">写数据成功</string>
    <string name="info_result">执行结果:</string>
    <string name="info_select_tid">写EPC号的标签ID必须是TID</string>
    <string name="open_warning">你必须在操作前打开设备！</string>
    <string name="wordptr_empty_warning">WordPtr不能为空！</string>
    <string name="length_empty_warning">长度不能为空！</string>
    <string name="pwd_empty_warning">密码不能为空！</string>
    <string name="content_empty_warning">写入数据需要的内容不能为空！</string>
    <string name="length_content_warning">长度和内容不匹配！</string>
    <string name="str_lenght_odd_warning">每个数据的长度不能是奇数！</string>
    <string name="data_ilegal">数据非法！（空的或长度是奇数？）</string>
    <string name="title_activity_set">SetActivity</string>


    <string name="submit">发送</string>
    <string name="start">开始</string>
    <string name="stop">停止</string>
    <string name="empty">清空</string>
    <string name="see">查看</string>
    <string name="title_activity_table">TableActivity</string>

</resources>
